Fixed reveal scroll and added category id parameter, decimal parameter.

--- a/look-core/css/default.css
+++ b/look-core/css/default.css
@@ -765,7 +765,7 @@ span.freeshipping {
 }
 
 .home-page-content .category-footer {
-    padding: 50px 0px;
+    padding: 10px 0px;
 }
 .home-page-content .category-footer h3 {
     font-family: 'Playfair Display', serif;
@@ -1158,4 +1158,10 @@ body.view-cart .navbar-fixed-top {
 }
 body.view-cart .header-push {
 	display: none !important;
+}
+
+@media(min-width: 768px) {
+    .revealOnScroll {
+        opacity:0;
+    }
 }
