--- a/look-core/css/default.css
+++ b/look-core/css/default.css
@@ -11,6 +11,21 @@ body {
   flex-direction: column;
 	min-height: 100vh;
 }
+#skip a
+{
+position:absolute;
+left:-10000px;
+top:auto;
+width:1px;
+height:1px;
+overflow:hidden;
+}
+#skip a:focus
+{
+position:static;
+width:auto;
+height:auto;
+}
 .page-content {
   flex: 1 0 auto;
 }
@@ -504,7 +519,7 @@ ul.extrapages li a {
     font-size: 18px;
     text-transform: none;
     font-weight: 700;
-    color: #286098;
+    color: #629CD5;
 }
 .mailist-box p {
     margin: 0 0 15px;
@@ -614,7 +629,7 @@ ul.social-icons li.social-icons-label {
     font-size: 18px;
     text-transform: none;
     font-weight: 700;
-    color: #286098;
+    color:#629CD5;
 
 }
 .social-icons li a {
@@ -745,7 +760,7 @@ span.freeshipping {
     background-color: #fff;
     padding: 30px 0 0;
 }
-.products-section h2 {
+.products-section h2,.products-section h1 {
     text-align: center;
     color: #091f35;
     font-size: 18px;
@@ -757,12 +772,12 @@ span.freeshipping {
     position: relative;
     border: none;
 }
-    .products-section h2 span{
+    .products-section h2 span,.products-section h1 span{
         display: inline-block;
         position:relative;
         z-index:1;
     }
-.products-section h2:after {
+.products-section h2:after,,.products-section h1:after{
     display: none;
 }
 
